🐛 (Menu): Fixed a bug abot the menu not taking 100% on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  overflow: hidden;
 }
